Fully functional adding and removing cost items

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 </div>
 
 <table id="resultTable">
-    <tr>
+    <tr id="start">
         <th id="th1">Expense</th>
         <th id="th2" >Date</th>
         <th id="th3">Amount</th>
-        <th id="th4"></th>
+        <th id="th4">"Del"</th>
     </tr>
-    <tr>
-        <td id="resTd1"> No expenses added yet...</td>
+    <tr id="tempTr">
+        <td id="tempTd"> No expenses added yet...</td>
         <td></td>
         <td></td>
         <td></td>
