a lot of progress save

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <td></td>
     </tr>
 </table>
-
+<button id="locals"> Check localstorage</button>
+<button id="delete"> Delete data in localstorage</button>
+<button id="omega">Get temprow back test button clicky</button>
 </body>
 </html
